<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
    <string name="test_bloodpressure">测血压</string>
    <string name="test_bloodglucose">测血糖</string>
    <string name="datacurve">数据曲线</string>
    <string name="manualinput">手动录入</string>
    <string name="showproduct">产品展示</string>
    <string name="health_knowledge">健康知识</string>
    <string name="setting">设置</string>
    <string name="greenchannel">绿色通道</string>
    <!-- 手动录入界面 -->
    <string name="dateandtime">日期和时间</string>
    <string name="systolicPressure">收缩压</string>
    <string name="diastolicPressure">舒张压</string>
    <string name="pulse">脉搏</string>
    <string name="bloodGlucose">血糖</string>
    <string name="inputsave">保存</string>
    <!-- 设置 ——主界面-->
    <string name="main_settings">设置</string>
    <string name="my_reminder">我的提醒</string>
    <string name="binding_bt_device">蓝牙绑定</string>
    <string name="profile_information">家庭组员信息</string>
    <string name="mymessage">我的消息</string>
    <string name="shebeihelp">设备信息</string>
    <string name="ZKY_account">ZKY健康账号</string>
    <string name="conduct_help">产品帮助</string>
    <!-- 设置——提醒 -->
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>

<string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>

    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">时间</string>
    <string name="set_alarm">"设置闹钟"</string>
    
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    

    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
     <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>
     
<string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>
    


    <string-array name="alarm_set">
	    <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
	    
	    <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
	    <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
	    <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
	    <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
	    <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
  <string-array name="snooze_duration_entries">
    <item msgid="8337408933053603125">"5 分钟"</item>
    <item msgid="5294206441496024610">"10 分钟"</item>
    <item msgid="2165904039211935470">"15 分钟"</item>
    <item msgid="7248236967714374250">"20 分钟"</item>
    <item msgid="738394723625179423">"25 分钟"</item>
    <item msgid="1180222611308391616">"30 分钟"</item>
  </string-array>
  <string-array name="snooze_duration_values">
    <item msgid="3655014754453084122">"5"</item>
    <item msgid="8939029597449573449">"10"</item>
    <item msgid="3922647341176353315">"15"</item>
    <item msgid="5821804105985044459">"20"</item>
    <item msgid="6048861883552402852">"25"</item>
    <item msgid="2740866721232379791">"30"</item>
  </string-array>
    
         <string name="makesureandreturn">确认</string>
     
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">请输入您的账号</string>
    <string name="username_hint">请输入</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_register_link">没有账号？请与管理员联系</string>
    
    <string name="username">用户：</string>
    
    <string name="user_id">账号ID</string>
    <string name="user_name">用户名</string>
    <string name="familyMember">家庭成员</string>
    
    <string name="help_document">帮助文档</string>
    <string name="exit">注销</string>
    
     <string name="greenchannelshow">温馨提示：请您在需要帮助到本地医院或者到北京三甲以上医院就诊时拨打此电话。</string>
	
	<string name="up">绑定sdk</string>
    <string name="down">解绑   sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>

	<string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    

</resources>
