<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="55dp"
       android:background="#0062C2"
       android:gravity="center"
       android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="添加成员"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/user_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_user_name"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:hint="@string/username_hint"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/familyMember"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/add_familymember_spinner"
            android:layout_width="150dp"
            android:layout_height="55dp" />

    </LinearLayout>

<LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/submit"
            android:onClick="adduser" />

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/fanhui"
            android:onClick="forreturn" />
    </LinearLayout>
</LinearLayout>